--- a/styles/components/sections/reviews.css
+++ b/styles/components/sections/reviews.css
@@ -74,7 +74,7 @@
     left: -2px;
     top: -97px;
 }
-.--video-poster::before {
+.reviews .--video-poster::before {
     top: 20px;
     right: 20px;
     left: auto;
@@ -82,7 +82,7 @@
     width: 42px;
     height: 42px;
 }
-.--video-poster:hover::before {
+.reviews .--video-poster:hover::before {
     transform: scale(1.05);
     transition: all 0.3s ease;
 }
