--- a/styles/pages/early-development-school.css
+++ b/styles/pages/early-development-school.css
@@ -159,6 +159,305 @@
 }
 
 
+/* БЛОК ПРЕИМУЩЕСТВА */
+.advantage-item {
+}
+.advantage-item.--no-descButton .advantage-item__desc-buttons {
+    display: none;
+}
+.advantage-item.--no-descButton .advantage-item__desc-text:not(:last-child) {
+    margin-bottom: 0px;
+}
+.advantage-item.--no-button .advantage-item__buttons {
+    display: none;
+}
+.advantage-item.--no-preTitle .advantage-item__desc-pre-title {
+    display: none;
+}
+.main__advantage-item {
+}
+.advantage-item__container {
+    display: flex;
+    flex-direction: column;
+}
+.advantage-item__desc {
+    display: flex;
+    gap: 60px;
+    margin-bottom: 80px;
+}
+.advantage-item__desc__title {
+    max-width: 610px;
+    width: 100%;
+    margin-bottom: 0;
+}
+.advantage-item__desc-elements {
+    display: flex;
+    flex-direction: column;
+    max-width: 610px;
+    width: 100%;
+}
+.advantage-item__desc-pre-title {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 130%;
+    margin-bottom: 40px;
+}
+.advantage-item__desc-text {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 130%;
+}
+.advantage-item__desc-text:not(:last-child) {
+    margin-bottom: 24px;
+}
+.advantage-item__desc-buttons {
+}
+.advantage-item__content {
+    margin-bottom: 32px;
+}
+.advantage-item__buttons {
+    display: flex;
+    gap: 24px;
+}
+.advantage-item__button {
+    flex: 1 1 calc(50% - 24px)
+}
+
+@media (max-width: 1361px) {
+
+}
+@media (max-width: 1281px) {
+    .advantage-item__desc {
+        gap: 50px;
+        margin-bottom: 70px;
+    }
+    .advantage-item__desc-pre-title {
+        font-size: 22px;
+        margin-bottom: 35px;
+    }
+    .advantage-item__buttons {
+        gap: 22px;
+    }
+}
+@media (max-width: 992px) {
+    .advantage-item__desc__title {
+        max-width: 400px;
+    }
+    .advantage-item__desc {
+        gap: 40px;
+        margin-bottom: 60px;
+    }
+    .advantage-item__desc-pre-title {
+        font-size: 22px;
+        margin-bottom: 30px;
+    }
+    .advantage-item__desc-text {
+        font-size: 15px;
+    }
+    .advantage-item__desc-text:not(:last-child) {
+        margin-bottom: 20px;
+    }
+    .advantage-item__content {
+        margin-bottom: 30px;
+    }
+    .advantage-item__buttons {
+        gap: 20px;
+    }
+}
+
+@media (max-width: 769px) {
+    .advantage-item__container {
+        padding: 0px;
+    }
+    .advantage-item__desc__title {
+        max-width: 610px;
+    }
+    .advantage-item__desc {
+        flex-direction: column;
+        gap: 50px;
+        margin-bottom: 50px;
+        padding: 0px 30px;
+    }
+    .advantage-item__desc-pre-title {
+        margin-bottom: 25px;
+    }
+    .advantage-item__desc-text {
+        font-size: 16px;
+    }
+    .advantage-item__desc-button {
+        max-width: 400px;
+        width: 100%;
+        border-radius: 250px;
+    }
+    .advantage-item__content {
+        margin-bottom: 40px;
+    }
+    .advantage-item__buttons {
+        flex-direction: column;
+        padding: 0px 30px;
+    }
+}
+
+@media (max-width: 651px) {
+    .advantage-item__desc {
+        gap: 48px;
+        margin-bottom: 48px;
+    }
+    .advantage-item__desc-text:not(:last-child) {
+        margin-bottom: 22px;
+    }
+    .advantage-item__content {
+        margin-bottom: 48px;
+    }
+}
+
+@media (max-width: 551px) {
+    .advantage-item__desc {
+        gap: 45px;
+        margin-bottom: 45px;
+    }
+    .advantage-item__desc-pre-title {
+        font-size: 20px;
+        line-height: 120%;
+    }
+    .advantage-item__desc-text {
+        font-size: 15px;
+    }
+    .advantage-item__desc-text:not(:last-child) {
+        margin-bottom: 24px;
+    }
+    .advantage-item__content {
+        margin-bottom: 45px;
+    }
+}
+@media (max-width: 431px) {
+    .advantage-item__desc-pre-title {
+        margin-bottom: 30px;
+    }
+    .advantage-item__desc-text {
+        font-size: 14px;
+    }
+}
+
+/* СТИЛИ СЛАЙДЕРА */
+.advantage-item.--nowrap-slider .advantage-item__slider {
+    width: 100%;
+}
+.advantage-item.--nowrap-slider .advantage-item__swiper {
+}
+.advantage-item.--nowrap-slider .advantage-item__swiper-wrapper {
+}
+.advantage-item.--nowrap-slider .advantage-item__swiper-slide {
+    height: auto;
+}
+
+@media (min-width: 992px) {
+    .advantage-item.--nowrap-slider .advantage-item__swiper-slide {
+        flex: 1 1 calc(50% - 60px);
+        margin-right: 0px !important;
+    }
+    .advantage-item.--nowrap-slider .advantage-item__swiper-wrapper {
+        flex-wrap: wrap;
+        gap: 40px 60px
+    }
+}
+.advantage-item.--nowrap-slider .advantage-item__slide {
+    max-width: 610px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.advantage-item.--nowrap-slider .advantage-item__slide-img-wrap {
+    max-width: 610px;
+    width: 100%;
+    height: 540px;
+    overflow: hidden;
+    border-radius: 24px;
+}
+.advantage-item.--nowrap-slider .advantage-item__slide-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.advantage-item.--nowrap-slider .advantage-item__slide-title {
+    font-size: 20px;
+    line-height: 120%;
+    color: #4E6932;
+    margin-bottom: 20px;
+    max-width: 293px;
+}
+.advantage-item.--nowrap-slider .advantage-item__swiper-controls {
+    display: none;
+}
+.advantage-item.--nowrap-slider .advantage-item__swiper-pagination {
+}
+.advantage-item.--nowrap-slider .advantage-item__swiper-navigation {
+}
+.advantage-item.--nowrap-slider .advantage-item__swiper-button-prev {
+}
+.advantage-item.--nowrap-slider .advantage-item__swiper-button-next {
+}
+
+@media (max-width: 1361px) {
+    .advantage-item.--nowrap-slider .advantage-item__slide-img-wrap {
+        width: auto;
+        height: auto;
+        aspect-ratio:  610 / 540;
+    }
+}
+
+@media (max-width: 1281px) {
+    .advantage-item.--nowrap-slider .advantage-item__slide-title {
+        font-size: 18px;
+        max-width: 270px;
+    }
+}
+
+@media (max-width: 992px) {
+    .advantage-item.--nowrap-slider .advantage-item__swiper {
+        overflow: visible;
+    }
+    .advantage-item.--nowrap-slider .advantage-item__slide-title {
+        font-size: 16px;
+        max-width: 245px;
+    }
+}
+
+@media (max-width: 797px) {
+
+}
+@media (max-width: 769px) {
+    .advantage-item.--nowrap-slider .advantage-item__slider {
+       padding: 0px 30px;
+    }
+}
+
+@media (max-width: 651px) {
+    .advantage-item.--nowrap-slider .advantage-item__slide-title {
+        font-size: 14px;
+        line-height: 120%;
+        max-width: 210px;
+    }
+}
+
+@media (max-width: 551px) {
+}
+
+@media (max-width: 431px) {
+    .advantage-item.--nowrap-slider .advantage-item__slide-title {
+        font-size: 12px;
+        max-width: 180px;
+    }
+    .advantage-item.--nowrap-slider .advantage-item__slide-img-wrap {
+        max-width: none;
+        width: 100%;
+        height: 230px;
+    }
+}
+
+
 /* БЛОК "ОТ 3 ДО 5 ЛЕТ" */
 .child-age {
 }
